--- a/index.html
+++ b/index.html
@@ -206,18 +206,16 @@
       </header>
 
       <main>
-        <div class="row">
-          <div class="col-9">
-            <div class="p-3 pb-md-4 mx-auto text-left">
-              <p class="fs-7" style="text-align: justify;">
-                I am a researcher in computer science and engineering with experience in deep learning, deep computer vision systems, and software engineering. I have been a research associate at the University of Waterloo, collaborating with Prof. <a href="https://scholar.google.ca/citations?user=ZzCpumQAAAAJ&hl=en" class="text-decoration-none" target="_blank" rel="noopener noreferrer">Krzysztof Czarnecki</a>. In this role, I specialize in 3D object detection and domain adaptation for autonomous vehicles, contributing to advancements in autonomous driving technology.<br>
-                Before this, I completed a postdoctoral fellowship at the University of Waterloo under the supervision of Prof. <a href="https://scholar.google.ca/citations?user=ZzCpumQAAAAJ&hl=en" class="text-decoration-none" target="_blank" rel="noopener noreferrer">Krzysztof Czarnecki</a>. During my post-doc, I focused on out-of-distribution and uncertainty estimation for deep neural networks, further honing my expertise in cutting-edge machine learning techniques.<br>
-                I obtained my Ph.D. from the University of Ottawa, where I worked under the esteemed supervision of Prof. <a href="https://scholar.google.com/citations?user=1sqvSQkAAAAJ&hl=en" class="text-decoration-none" target="_blank" rel="noopener noreferrer">Timothy C. Lethbridge</a>. My doctoral research centered on modularity for model-based software engineering, and I made significant contributions to the <a href="https://cruise.umple.org/umple/" class="text-decoration-none" target="_blank" rel="noopener noreferrer">Umple</a> project. 
+        <div class="row row justify-content-center">
+          <div class="col ">
+              <p class="fs-7 px-3 pb-md-4" style="text-align: justify;">
+                I am a researcher in computer science and engineering with experience in deep learning, deep computer vision systems, and software engineering. I have been a research associate at the University of Waterloo, collaborating with Prof. <a href="https://scholar.google.ca/citations?user=ZzCpumQAAAAJ&hl=en" class="text-decoration-none" target="_blank" rel="noopener noreferrer">Krzysztof Czarnecki</a>. In this role, I specialized in out-of-distribution detection, 3D object detection, and domain adaptation for autonomous vehicles, contributing to advancements in autonomous driving technology.<br>
+                Before this, I completed a postdoctoral fellowship at the University of Waterloo under the supervision of Prof. <a href="https://scholar.google.ca/citations?user=ZzCpumQAAAAJ&hl=en" class="text-decoration-none" target="_blank" rel="noopener noreferrer">Krzysztof Czarnecki</a>. During my post-doc, I focused on Explainable AI (XAI), active learning, and uncertainty estimation for deep neural networks, further honing my expertise in cutting-edge machine learning techniques.<br>
+                I have obtained my Ph.D. from the University of Ottawa, where I worked under the esteemed supervision of Prof. <a href="https://scholar.google.com/citations?user=1sqvSQkAAAAJ&hl=en" class="text-decoration-none" target="_blank" rel="noopener noreferrer">Timothy C. Lethbridge</a>. My doctoral research centered on modularity for model-based software engineering, and I made significant contributions to the <a href="https://cruise.umple.org/umple/" class="text-decoration-none" target="_blank" rel="noopener noreferrer">Umple</a> project. 
                 <!-- I conducted research on requirement egineering and software architecture during my M.Sc. under the supervision of Prof.  <a href="https://scholar.google.com/citations?user=WacQk64AAAAJ&hl=en" class="text-decoration-none" target="_blank" rel="noopener noreferrer">Fereidoon Shams Aliee</a>. -->
-              </p>
-            </div>    
+              </p> 
           </div>
-          <div class="col">
+          <div class="col col-sm-3">
             <img src="vahdat_abdelzad.jpg" alt="The profile picture of Dr. Vahdat Abdelzad" class="rounded-circle" width="150" height="150">
           </div>
         </div>
