added a missing paper to the list of publications.

--- a/index.html
+++ b/index.html
@@ -380,6 +380,25 @@
             </div>
             <!-- end -->
             <!-- start -->
+            <div class="list-group-item publication list-group-item-action">
+              <img src="publications/2020_The_Effect_of_Optimization_Methods_on_the_Robustness_of_Out-of-Distribution_Detection_Approaches.png" alt="Paper Image">
+              <div>
+                <p class="mb-1">
+                  <a href="https://arxiv.org/abs/2006.14584" class="text-decoration-none" target="_blank" rel="noopener noreferrer">The Effect of Optimization Methods on the Robustness of Out-of-Distribution Detection Approaches</a>
+                </p>
+                <p class="mb-1">
+                  <strong>Vahdat Abdelzad</strong>, Krzysztof Czarnecki, Rick Salay.
+                </p>
+                <p class="mb-1">
+                  <em>arXiv:2006.14584, 2020.</em>
+                </p>
+                <p>
+                  [<a href="publications/2020_The_Effect_of_Optimization_Methods_on_the_Robustness_of_Out-of-Distribution_Detection_Approaches.pdf" class="text-decoration-none" target="_blank" rel="noopener noreferrer">pdf</a>]
+                </p>
+              </div>
+            </div>
+            <!-- end -->
+            <!-- start -->
             <div class="list-group-item list-group-item-action publication">
               <img src="publications/2020_Simple_Continual_Learning_Strategies_for_Safer_Classifers.png" alt="Paper Image" >
               <div>
@@ -432,25 +451,6 @@
                 </p>
                 <p>
                   [<a href="publications/2020_Improved_Policy_Extraction_via_Online_Q-Value_Distillation.pdf" class="text-decoration-none" target="_blank" rel="noopener noreferrer">pdf</a>]
-                </p>
-              </div>
-            </div>
-            <!-- end -->
-            <!-- start -->
-            <div class="list-group-item publication list-group-item-action">
-              <img src="publications/2020_The_Effect_of_Optimization_Methods_on_the_Robustness_of_Out-of-Distribution_Detection_Approaches.png" alt="Paper Image">
-              <div>
-                <p class="mb-1">
-                  <a href="https://arxiv.org/abs/2006.14584" class="text-decoration-none" target="_blank" rel="noopener noreferrer">The Effect of Optimization Methods on the Robustness of Out-of-Distribution Detection Approaches</a>
-                </p>
-                <p class="mb-1">
-                  <strong>Vahdat Abdelzad</strong>, Krzysztof Czarnecki, Rick Salay.
-                </p>
-                <p class="mb-1">
-                  <em>arXiv:2006.14584, 2020.</em>
-                </p>
-                <p>
-                  [<a href="publications/2020_The_Effect_of_Optimization_Methods_on_the_Robustness_of_Out-of-Distribution_Detection_Approaches.pdf" class="text-decoration-none" target="_blank" rel="noopener noreferrer">pdf</a>]
                 </p>
               </div>
             </div>
@@ -512,6 +512,25 @@
                 </p>
               </div>
             </div>
+            <!-- end -->
+            <div class="list-group-item list-group-item-action publication">
+              <img src="publications/2018_Improving_Reconstruction_Autoencoder_Out-of-distribution_Detection_with_Mahalanobis_Distance.png" alt="Paper Image" >
+              <div>
+                <p class="mb-1">
+                  <a href="https://arxiv.org/abs/1812.02765" class="text-decoration-none" target="_blank" rel="noopener noreferrer">Improving Reconstruction Autoencoder Out-of-distribution Detection with Mahalanobis Distance</a>
+                </p>
+                <p class="mb-1">
+                  Taylor Denouden, Rick Salay, Krzysztof Czarnecki, <strong>Vahdat Abdelzad</strong>, Buu Phan, Sachin Vernekar.
+                </p>
+                <p class="mb-1">
+                  <em>arXiv:1812.02765, 2018.</em>
+                </p>
+                <p>
+                  [<a href="publications/2018_Improving_Reconstruction_Autoencoder_Out-of-distribution_Detection_with_Mahalanobis_Distance.pdf" class="text-decoration-none" target="_blank" rel="noopener noreferrer">pdf</a>]
+                </p>
+              </div>
+            </div>
+            <!-- end -->  
             <!-- end -->
             <div class="list-group-item list-group-item-action publication">
               <img src="publications/2018_Calibrating_Uncertainties_in_Object_Localization_Task.png" alt="Paper Image" >
