added the paper published at itsc 2024.

--- a/index.html
+++ b/index.html
@@ -245,12 +245,12 @@
         <div class="row px-3 ">
           <div class="list-group list-group-flush">
             <!-- start -->
-            <!-- <div class="list-group-item publication list-group-item-action">
-              <img src="https://via.placeholder.com/200x200" alt="Paper Image" class="publication-image">
+            <div class="list-group-item publication list-group-item-action">
+              <img src="publications/2024_3D_Object_Detection_Using_Sparsely_Labelled_Sequential_Data.png" alt="Paper Image" class="publication-image">
               <div>
 
                 <p class="mb-1">
-                  <a href="#" class="text-decoration-none " target="_blank" rel="noopener noreferrer">3D Object Detection with Track-based Auto-Labelling using Very Sparsely Labelled Data</a>
+                  <a href="https://its.papercept.net/conferences/scripts/abstract.pl?ConfID=87&Number=648" class="text-decoration-none " target="_blank" rel="noopener noreferrer">3D Object Detection with Track-Based Auto-Labelling Using Very Sparsely Labelled Data</a>
                 </p>
                 <p class="mb-1">
                   Mei Qi Tang, <strong>Vahdat Abdelzad</strong> , Chengjie Huang, Sean Sedwards, Krzysztof Czarnecki.
@@ -258,8 +258,11 @@
                 <p class="mb-1">
                   <em>ITSC, 2024.</em>
                 </p>
+                <p>
+                  [<a href="publications/2024_3D_Object_Detection_Using_Sparsely_Labelled_Sequential_Data.pdf" class="text-decoration-none" target="_blank" rel="noopener noreferrer">pdf</a>]
+                </p>
               </div>
-            </div> -->
+            </div>
             <!-- end -->
             <!-- start -->
             <div class="list-group-item publication list-group-item-action">
