--- a/index.html
+++ b/index.html
@@ -247,6 +247,26 @@
           <div class="list-group list-group-flush">
             <!-- start -->
             <div class="list-group-item publication list-group-item-action">
+              <img src="publications/2025_VADet_Multi-frame_iDAR_3D_Object_Detection_using_Variable_Aggregation.png" alt="Paper Image" class="publication-image">
+              <div>
+
+                <p class="mb-1">
+                  <a href="https://https://ieeexplore.ieee.org/document/10943960" class="text-decoration-none " target="_blank" rel="noopener noreferrer">VADet: Multi-Frame LiDAR 3D Object Detection Using Variable Aggregation</a>
+                </p>
+                <p class="mb-1">
+                  Chengjie Huang, <strong>Vahdat Abdelzad</strong> , Sean Sedwards, Krzysztof Czarnecki.
+                </p>
+                <p class="mb-1">
+                  <em>WACV, 2025.</em>
+                </p>
+                <p>
+                  [<a href="publications/2025_VADet_Multi-frame_iDAR_3D_Object_Detection_using_Variable_Aggregation.pdf" class="text-decoration-none" target="_blank" rel="noopener noreferrer">pdf</a>]
+                </p>
+              </div>
+            </div>
+            <!-- end -->
+            <!-- start -->
+            <div class="list-group-item publication list-group-item-action">
               <img src="publications/2024_3D_Object_Detection_Using_Sparsely_Labelled_Sequential_Data.png" alt="Paper Image" class="publication-image">
               <div>
 
